# smorgasbord

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  package.json  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml
auth-service/: .env  Cargo.toml
auth-service/migrations/2021-10-13-152240_create_users/: up.sql
auth-service/src/: graphql.rs  lib.rs  main.rs  models.rs  repository.rs  utils.rs
auth-service/tests/: query_tests.rs
auth-service/tests/common/: mod.rs
docker/: Dockerfile.auth-service  Dockerfile.posts-service
gateway/: package.json  supergraph-config.yml  supergraph.graphql  tsconfig.json
gateway/src/: index.ts
posts-service/: package.json
posts-service/src/: app.module.ts  posts.resolver.ts
