[package]
name = "auth-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-graphql = "2.10"
async-graphql-actix-web = "2.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "1.0"
serde_json = "1.0"


