[package]
name = "auth-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
argonautica = "0.2.0"
async-graphql = "2.11"
async-graphql-actix-web = "2.10"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "1.0"
serde_json = "1.0"


