[package]
name = "auth-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.1"
rust-argon2 = "1.0"
async-graphql = "3.0"
async-graphql-actix-web = "3.0.28"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.4"
serde_json = "1.0"


